--- a/06-graphing.Rmd
+++ b/06-graphing.Rmd
@@ -319,7 +319,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12)
 
 print(my_graph)
@@ -356,7 +358,9 @@ my_graph <- ggplot(data = movie_data,
                             "BvS" = "Batman v Superman",
                             "JL" = "Justice League",
                             "WW" = "Wonder Woman")) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12)
   
 
@@ -380,7 +384,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12)
   
 
@@ -406,7 +412,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12) +
   theme(axis.text.x = element_text(angle = 60))
 
@@ -431,7 +439,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12) +
   theme(axis.text.x = element_text(angle = 60, 
                                    hjust = 1))  
@@ -465,7 +475,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12) +
   theme(axis.text.x = element_text(angle = 60, 
                                    hjust = 1))  
@@ -496,7 +508,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12) +
   theme(axis.text.x = element_text(angle = 60, 
                                    hjust = 1))  
@@ -536,7 +550,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12) +
   theme(axis.text.x = element_text(angle = 60, 
                                    hjust = 1))  
@@ -573,7 +589,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12) +
   theme(axis.text.x = element_text(angle = 60, 
                                    hjust = 1))  
@@ -606,7 +624,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12) +
   theme(axis.text.x = element_text(angle = 60, 
                                    hjust = 1)) +
@@ -638,7 +658,9 @@ my_graph <- ggplot(data = movie_data,
             nudge_y = 400) +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12) +
   theme(axis.text.x = element_text(angle = 60, 
                                    hjust = 1)) +
@@ -691,7 +713,9 @@ my_graph <- ggplot(data = movie_data,
              emoji="1f345") +
   coord_cartesian(ylim = c(0, 3500)) +
   scale_y_continuous(breaks = seq(0, 3500, by = 500)) +
-  labs(x = "Movie", y = "Box office (millions)", fill = "Studio") +
+  labs(x = "Movie",
+       y = "Box office (millions)",
+       fill = "Studio") +
   theme_classic(12) +
   theme(axis.text.x = element_text(angle = 60, 
                                    hjust = 1)) +
