--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -6097,7 +6097,9 @@ We use the labs() command to set the labels forthe x- and y-axes:
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{)}
 
 \KeywordTok{print}\NormalTok{(my_graph)}
@@ -6140,7 +6142,9 @@ Our data file contains a column with the long/full version of the movie names. B
                             \StringTok{"BvS"}\NormalTok{ =}\StringTok{ "Batman v Superman"}\NormalTok{,}
                             \StringTok{"JL"}\NormalTok{ =}\StringTok{ "Justice League"}\NormalTok{,}
                             \StringTok{"WW"}\NormalTok{ =}\StringTok{ "Wonder Woman"}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{)}
   
 
@@ -6168,7 +6172,9 @@ With our movie data we don't need to use \textbf{scale\_x\_discrete} because we 
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{)}
   
 
@@ -6198,7 +6204,9 @@ Use theme() to adjust angle of x-axis labels. We can use the theme command to ad
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{))}
 
@@ -6226,7 +6234,9 @@ Use theme() and the hjust argument to adjust the alignment of the x-axis labels.
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
                                    \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{))  }
@@ -6266,7 +6276,9 @@ We can make the movie bars go left to right from lowest to highest box office re
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
                                    \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{))  }
@@ -6302,7 +6314,9 @@ We can make the movie bars go left to right from highest to lowest box office re
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
                                    \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{))  }
@@ -6346,7 +6360,9 @@ We can make the movie bars go left to right from in an order of our chooseing wi
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
                                    \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{))  }
@@ -6382,7 +6398,9 @@ After inspecting the graph on the previous page, you might think that Marvel sho
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
                                    \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{))  }
@@ -6414,7 +6432,9 @@ R colour names/pictures can be found here: \url{http://sape.inf.usi.ch/quick-ref
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
                                    \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{)) }\OperatorTok{+}
@@ -6442,7 +6462,9 @@ If you are a really big geek (like me) you might look at the previous graph and 
             \DataTypeTok{nudge_y =} \DecValTok{400}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
                                    \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{)) }\OperatorTok{+}
@@ -6490,7 +6512,9 @@ If you scroll down to section 5 Uncategorized on this page you will find the cod
              \DataTypeTok{emoji=}\StringTok{"1f345"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{coord_cartesian}\NormalTok{(}\DataTypeTok{ylim =} \KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_continuous}\NormalTok{(}\DataTypeTok{breaks =} \KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{3500}\NormalTok{, }\DataTypeTok{by =} \DecValTok{500}\NormalTok{)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Movie"}\NormalTok{,}
+       \DataTypeTok{y =} \StringTok{"Box office (millions)"}\NormalTok{,}
+       \DataTypeTok{fill =} \StringTok{"Studio"}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme_classic}\NormalTok{(}\DecValTok{12}\NormalTok{) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{theme}\NormalTok{(}\DataTypeTok{axis.text.x =} \KeywordTok{element_text}\NormalTok{(}\DataTypeTok{angle =} \DecValTok{60}\NormalTok{, }
                                    \DataTypeTok{hjust =} \DecValTok{1}\NormalTok{)) }\OperatorTok{+}
