--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -6,7 +6,7 @@ library(tidyverse)
 
 ## Required
 
-The following data files below used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
+The data files below are used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
 
 | Required Data |
 |-------------------|
