--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -7,7 +7,7 @@ library(tidyverse)
 ## Required Packages
 
 
-The following data files below used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
+The data files below are used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
 
 
 | Required Data |
