--- a/06-graphing.Rmd
+++ b/06-graphing.Rmd
@@ -2,7 +2,7 @@
 
 ## Required
 
-The following data files below are used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
+The data files below are used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
 
 | Required Data |
 |-------------------|
